src/test/ui/not-clone-closure.stderr
error[E0277]: the trait bound `S: Clone` is not satisfied in `[closure@$DIR/not-clone-closure.rs:7:17: 9:6 a:S]`
  --> $DIR/not-clone-closure.rs:11:23
   |
LL |       let hello = move || {
   |  _________________-
LL | |         println!("Hello {}", a.0);
LL | |     };
   | |_____- within this `[closure@$DIR/not-clone-closure.rs:7:17: 9:6 a:S]`
LL | 
LL |       let hello = hello.clone();
   |                         ^^^^^ within `[closure@$DIR/not-clone-closure.rs:7:17: 9:6 a:S]`, the trait `Clone` is not implemented for `S`
   |
   = note: required because it appears within the type `[closure@$DIR/not-clone-closure.rs:7:17: 9:6 a:S]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
